Compiler/tests/good/bool3.nx
printn(1 > 2 && 1);
