Compiler/tests/bad/bool2.nx
printn(1>2 || size(1));
